[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "tk"
dynamic = ["version"]
dependencies = [ "importlib-metadata>=7.1.0" ]
requires-python = ">= 3.12.5"
readme = "README.md"
authors = [ {name = "Joshua Rose", email = "joshuarose@gmx.com"} ]
maintainers = [ {name = "Joshua Rose", email = "joshuarose@gmx.com"} ]
keywords = ["tools", "cli", "task-manager"]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Users",
        "Topic :: Task Manager :: Tools :: CLI",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/H4ppy-04/tk"
Issues = "https://github.com/H4ppy-04/tk/issues"
Changelog = "https://github.com/H4ppy-04/tk/blob/main/CHANGELOG.md"

[project.scripts]
main = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
