[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "tk"
dynamic = ["version"]
dependencies = [ "black==24.4.0", "click==8.1.7", "importlib_metadata==7.1.0", "isort==5.13.2", "mypy-extensions==1.0.0", "packaging==24.0", "pathspec==0.12.1", "platformdirs==4.2.0", "python-dateutil==2.9.0.post0", "setuptools==70.0.0", "setuptools-scm==8.0.4", "six==1.16.0", "toml==0.10.2", "typing_extensions==4.11.0", "zipp==3.19.1" ]
requires-python = ">= 3.12.3"
readme = "README.md"
authors = [ {name = "Joshua Rose", email = "joshuarose@gmx.com"} ]
maintainers = [ {name = "Joshua Rose", email = "joshuarose@gmx.com"} ]
keywords = ["tools", "cli", "task-manager"]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Users",
        "Topic :: Task Manager :: Tools :: CLI",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/H4ppy-04/tk"
Issues = "https://github.com/H4ppy-04/tk/issues"
Changelog = "https://github.com/H4ppy-04/tk/blob/main/CHANGELOG.md"

[project.scripts]
task = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
